# Chillar-Management-System

./: Abstract.h  Addons.h  CMakeLists.txt  Convicted.cpp  Functions.cpp  G.txt  Just data.txt  Person.cpp  Prisoners.cpp  Prisoners.h  PrisonersUI.h  PrisonersUi.cpp  PrisonersUi.h  Visitor.cpp  Visitor.h  admin.cpp  admin.h  hierarchy.cpp  hierarchy.h  main.cpp  r.out  r.out.stackdump  test.cpp
Prisoners Data/: A.txt  B.txt  C.txt  D.txt  E.txt  F.txt  G.txt  Removed_IDs.txt  Removed_Prisoners.txt  T.txt  test.txt
